refactor: .collect(Collectors.toList()) 를 .toList() 로 수정한다